// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field in error state 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--space-2);
}

.sxoujvt {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-4);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  white-space: nowrap;
  width: max-content;
}

.sxoujvt[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxoujvtxyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxoujvtxyrog--c2:not([disabled]):hover,
.sxoujvtxyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxoujvtxyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxoujvtxyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxfey5o {
  color: var(--colors-tonal900);
  font-family: var(--fonts-sans);
  font-weight: 400;
  margin: 0;
}

.sxfey5oxzxpn--size-sm {
  font-size: var(--fontSizes-sm);
  line-height: 1.69;
}

.sxfey5oxzxpn--size-sm::before {
  content: '';
  margin-bottom: -0.477em;
  display: table;
}

.sxfey5oxzxpn--size-sm::after {
  content: '';
  margin-top: -0.477em;
  display: table;
}

.sxfey5o-m6cy5 {
  color: var(--colors-danger);
  margin-top: var(--space-1);
}

.sxdiu5c {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxxl4lf {
  color: var(--colors-danger);
  margin-left: var(--space-1);
}

.sx47aq8 {
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx47aq8:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx47aq8[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sx47aq8hpnso--state-error {
  border: 1px solid var(--colors-danger);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxdiu5c sxdiu5cjqqvr--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
          <span
            class="sxxl4lf"
          >
            *
          </span>
        </label>
      </div>
      <input
        class="sx47aq8 sx47aq8hpnso--state-error"
        error="This field is required"
        id="INPUT FIELD"
        name="INPUT FIELD"
        type="text"
      />
      <p
        class="sxfey5o sxfey5oxzxpn--size-sm sxfey5o-m6cy5"
      >
        This field is required
      </p>
    </div>
    <button
      class="sxoujvt sxoujvt03kze--theme-primary sxoujvt03kze--appearance-solid sxoujvtxyrog--c2"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`InputField component renders a field with a number input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--space-2);
}

.sxdiu5c {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sx47aq8 {
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx47aq8:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx47aq8[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze sx03kze-6obnf"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxdiu5c sxdiu5cjqqvr--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sx47aq8"
        id="INPUT FIELD"
        inputmode="numeric"
        name="INPUT FIELD"
        pattern="[0-9]*"
        placeholder="001"
        type="text"
      />
    </div>
  </form>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--space-2);
}

.sxdiu5c {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sx47aq8 {
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx47aq8:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx47aq8[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze sx03kze-6obnf"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxdiu5c sxdiu5cjqqvr--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sx47aq8"
        id="INPUT FIELD"
        name="INPUT FIELD"
        placeholder="INPUT FIELD"
        type="text"
      />
    </div>
  </form>
</div>
`;
